# CART-in-C

./: CMakeLists.txt  Makefile  README.md  cart.c  cart.h  help.c  help.h  main.c
src/: cart.c  cart.h  help.c  help.h  main.c
